@@ -1,5 +1,17 @@
 2012-11-13  Anders Carlsson  <andersca@apple.com>
 
+        Factor the code to enter accelerated compositing given a layer out into a separate method
+        https://bugs.webkit.org/show_bug.cgi?id=102155
+
+        Reviewed by Andreas Kling.
+
+        * UIProcess/API/mac/WKView.mm:
+        (-[WKView _enterAcceleratedCompositingMode:]):
+        (-[WKView _enterAcceleratedCompositingModeWithRootLayer:]):
+        * UIProcess/API/mac/WKViewInternal.h:
+
+2012-11-13  Anders Carlsson  <andersca@apple.com>
+
         RemoteGraphicsLayer destructor should call GraphicsLayer::willBeDestroyed
         https://bugs.webkit.org/show_bug.cgi?id=102135
 
